@@ -58,9 +58,9 @@ all xml info files are downloaded when doing urpmi.addmedia and urpmi.update
 
 =back
 
-=item B<no-suggests>
+=item B<no-recommends>
 
-Same as specifying B<--no-suggests> for urpmi. Disabled by default.
+Same as specifying B<--no-recommends> for urpmi. Disabled by default.
 
 =item B<auto>
 
