@@ -198,7 +198,7 @@ Proposes a very verbose mode (similar to rpm -vv)
 
 Print warnings when packages cannot be ordered properly due to dependancy loops.
 
-=item B<--no-suggests>
+=item B<--no-recommends>
 
 With this option, urpmi will not install "suggested" packages. 
 By default, urpmi will install (newly) suggested packages.
@@ -206,7 +206,7 @@ By default, urpmi will install (newly) suggested packages.
 =item B<--allow-suggests>
 
 With this option, urpmi will install "suggested" packages. 
-This is useful if you have C<no-suggests> in urpmi.cfg.
+This is useful if you have C<no-recommends> in urpmi.cfg.
 
 =item B<--justdb>
 
