@@ -94,7 +94,7 @@ List packages that are not available on any media. This can help to find
 packages that are still installed but that are now obsolete because they
 have been removed from the current version of Mageia Linux.
 
-=item B<--no-suggests>
+=item B<--no-recommends>
 
 With this option, urpmq will not require "suggested" packages. 
 By default, urpmq will require (newly) suggested packages.
@@ -102,7 +102,7 @@ By default, urpmq will require (newly) suggested packages.
 =item B<--allow-suggests>
 
 With this option, urpmi will install "suggested" packages. 
-This is useful if you have C<no-suggests> in urpmi.cfg.
+This is useful if you have C<no-recommends> in urpmi.cfg.
 
 =item B<--keep>
 
