@@ -120,8 +120,12 @@ my %options_spec = (
 	suggests => sub { 
 	    $urpm->{fatal}(1, "Use --allow-suggests instead of --suggests");
 	},
-	'allow-suggests' => sub { $urpm->{options}{'no-suggests'} = 0 },
-	'no-suggests' => sub { $urpm->{options}{'no-suggests'} = 1 },
+	'allow-suggests' => sub { $urpm->{options}{'no-recommends'} = 0 },
+	'no-recommends' => sub { $urpm->{options}{'no-recommends'} = 1 },
+	'no-suggests' => sub { # COMPAT
+	    warn "WARNING: --no-suggests is deprecated. Use --no-recommends instead\n";
+	    $urpm->{options}{'no-recommends'} = 1;
+	},
 	'allow-nodeps' => sub { $urpm->{options}{'allow-nodeps'} = 1 },
 	'allow-force' => sub { $urpm->{options}{'allow-force'} = 1 },
 	'downgrade' => sub { $urpm->{options}{downgrade} = 1 },
@@ -418,7 +422,7 @@ foreach my $k ("test!", "force", "root=s", "use-distrib=s", 'env=s',
 {
     $options_spec{urpme}{$k} = $options_spec{urpmi}{$k};
 }
-foreach my $k ("root=s", "nolock", "use-distrib=s", "skip=s", "prefer=s", "synthesis=s", 'no-suggests', 'allow-suggests', 'auto-orphans')
+foreach my $k ("root=s", "nolock", "use-distrib=s", "skip=s", "prefer=s", "synthesis=s", 'no-recommends', 'no-suggests', 'allow-suggests', 'auto-orphans')
 {
     $options_spec{urpmq}{$k} = $options_spec{urpmi}{$k};
 }
