@@ -72,7 +72,7 @@ sub usage() {
 ") . N("  --requires     - requires tags
 ") . N("  --size         - installed size
 ") . N("  --sourcerpm    - source rpm name
-") . N("  --suggests     - suggests tags
+") . N("  --recommends   - recommends tags
 ") . N("  --summary      - summary
 ") . N("  --url          - url
 ") . N("  --vendor       - vendor
